tests/cases/scc/error/0007-unmatchedcppif.c.res
./tests/cases/scc/error/0007-unmatchedcppif.c:4:1:	error:   #if or #ifdef needs to be closed by an #endif.
exit code 1
